refactor(test): 优化电力线路塔架测试代码
- 将 PowerLineTowerFamilyIntegrationTest 中的断言从 size() > 0 改为 isEmpty()
- 移除 TowerParametricClassicTest 和 TowerParametricSmallLatticeTest 中未使用的导入
- 将 TowerParametricSmallLatticeTest 中的 get(0) 替换为 getFirst() 方法
- 将 TowerStructurePresetsTest 中的 get(0) 替换为 getFirst() 方法
- 简化测试代码中的列表访问方式，提高代码可读性